[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/GlobalUI/CharacterSheet/CharacterSheet.gd" type="Script" id=1]
[ext_resource path="res://src/Entities/Items/DocumentsRevised/DocumentTabsContainer.gd" type="Script" id=2]
[ext_resource path="res://src/Modes/CharacterCreation/UI/IdentityCard.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/GlobalUI/CharacterSheet/Inventory/new scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/GlobalUI/CharacterSheet/SearchResults.gd" type="Script" id=5]
[ext_resource path="res://src/GlobalUI/SearchBar/SearchBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/GlobalUI/CharacterSheet/Personality/PersonalityChart.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/GlobalUI/CharacterSheet/Display/DisplayContainerValue.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/GlobalUI/CharacterSheet/Display/DisplayValueBar.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/GlobalUI/CharacterSheet/CharacterInfo/Biography/Biography.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/GlobalUI/CharacterSheet/Personality/UnitRelationship.tscn" type="PackedScene" id=11]

[node name="CharacterSheet" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 250, 300 )
color = Color( 0, 0, 0, 0.5 )
script = ExtResource( 1 )

[node name="Control" type="Container" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -300.0
margin_right = 500.0
margin_bottom = 300.0
script = ExtResource( 2 )

[node name="CharacterInfo" type="PanelContainer" parent="Control"]
margin_right = 1000.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CharacterInfo"]
margin_left = 7.0
margin_top = 7.0
margin_right = 993.0
margin_bottom = 593.0

[node name="Information" type="VBoxContainer" parent="Control/CharacterInfo/HBoxContainer"]
margin_right = 491.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterCard" parent="Control/CharacterInfo/HBoxContainer/Information" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 491.0
margin_bottom = 220.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayContainerValue" parent="Control/CharacterInfo/HBoxContainer/Information" instance=ExtResource( 8 )]
margin_top = 224.0
margin_right = 491.0
margin_bottom = 252.0

[node name="HBoxContainer" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue" index="0"]
margin_right = 484.0

[node name="ValueNameLabel" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue/HBoxContainer" index="0"]
margin_right = 236.0
text = "Employment Type:"

[node name="ValueLabel" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue/HBoxContainer" index="1"]
margin_left = 240.0
margin_right = 477.0
text = "Salary"

[node name="DisplayContainerValue4" parent="Control/CharacterInfo/HBoxContainer/Information" instance=ExtResource( 8 )]
margin_top = 256.0
margin_right = 491.0
margin_bottom = 284.0

[node name="HBoxContainer" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue4" index="0"]
margin_right = 484.0

[node name="ValueNameLabel" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue4/HBoxContainer" index="0"]
margin_right = 236.0
text = "Role:"

[node name="ValueLabel" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue4/HBoxContainer" index="1"]
margin_left = 240.0
margin_right = 477.0
text = "Party Leader"

[node name="DisplayContainerValue2" parent="Control/CharacterInfo/HBoxContainer/Information" instance=ExtResource( 8 )]
margin_top = 288.0
margin_right = 491.0
margin_bottom = 316.0

[node name="HBoxContainer" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue2" index="0"]
margin_right = 484.0

[node name="ValueNameLabel" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue2/HBoxContainer" index="0"]
margin_right = 236.0
text = "Pay Rate:"

[node name="ValueLabel" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue2/HBoxContainer" index="1"]
margin_left = 240.0
margin_right = 477.0
text = "1400 / week"

[node name="DisplayContainerValue3" parent="Control/CharacterInfo/HBoxContainer/Information" instance=ExtResource( 8 )]
margin_top = 320.0
margin_right = 491.0
margin_bottom = 348.0

[node name="HBoxContainer" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue3" index="0"]
margin_right = 484.0

[node name="ValueNameLabel" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue3/HBoxContainer" index="0"]
margin_right = 236.0
text = "Medical Deposit:"

[node name="ValueLabel" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue3/HBoxContainer" index="1"]
margin_left = 240.0
margin_right = 477.0
text = "$10,000"

[node name="DisplayValueBar" parent="Control/CharacterInfo/HBoxContainer/Information" instance=ExtResource( 9 )]
margin_top = 352.0
margin_right = 491.0
margin_bottom = 380.0

[node name="HBoxContainer" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayValueBar" index="0"]
margin_right = 484.0
margin_bottom = 21.0

[node name="ValueNameLabel" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayValueBar/HBoxContainer" index="0"]
margin_top = 0.0
margin_right = 108.0
margin_bottom = 14.0
text = "Contract Length: "

[node name="ProgressBar" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayValueBar/HBoxContainer" index="1"]
margin_left = 112.0
margin_right = 477.0
margin_bottom = 14.0

[node name="ValueLabel" parent="Control/CharacterInfo/HBoxContainer/Information/DisplayValueBar/HBoxContainer/ProgressBar" index="0"]
text = "-1 days"
show_max = true
descriptor = "days"

[node name="Label" type="Label" parent="Control/CharacterInfo/HBoxContainer/Information"]
margin_top = 384.0
margin_right = 491.0
margin_bottom = 398.0
text = "Employment Options:"
align = 1

[node name="Label2" type="Label" parent="Control/CharacterInfo/HBoxContainer/Information"]
margin_top = 478.0
margin_right = 491.0
margin_bottom = 509.0
size_flags_vertical = 6
text = "Extend ----- Dismiss Unit ----- Adjust Pay ------ Bribe ----- Adjust Medical Deposit"
align = 1
valign = 1
autowrap = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CharacterInfo/HBoxContainer"]
margin_left = 495.0
margin_right = 986.0
margin_bottom = 586.0
size_flags_horizontal = 3

[node name="DisplayContainerValue4" parent="Control/CharacterInfo/HBoxContainer/VBoxContainer" instance=ExtResource( 8 )]
margin_right = 491.0

[node name="HBoxContainer" parent="Control/CharacterInfo/HBoxContainer/VBoxContainer/DisplayContainerValue4" index="0"]
margin_right = 484.0

[node name="ValueNameLabel" parent="Control/CharacterInfo/HBoxContainer/VBoxContainer/DisplayContainerValue4/HBoxContainer" index="0"]
margin_right = 236.0
text = "Residence:"

[node name="ValueLabel" parent="Control/CharacterInfo/HBoxContainer/VBoxContainer/DisplayContainerValue4/HBoxContainer" index="1"]
margin_left = 240.0
margin_right = 477.0
text = "Stonewall"

[node name="DisplayContainerValue5" parent="Control/CharacterInfo/HBoxContainer/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 32.0
margin_right = 491.0
margin_bottom = 60.0

[node name="HBoxContainer" parent="Control/CharacterInfo/HBoxContainer/VBoxContainer/DisplayContainerValue5" index="0"]
margin_right = 484.0

[node name="ValueNameLabel" parent="Control/CharacterInfo/HBoxContainer/VBoxContainer/DisplayContainerValue5/HBoxContainer" index="0"]
margin_right = 236.0
text = "Place of Birth:"

[node name="ValueLabel" parent="Control/CharacterInfo/HBoxContainer/VBoxContainer/DisplayContainerValue5/HBoxContainer" index="1"]
margin_left = 240.0
margin_right = 477.0
text = "Union City"

[node name="DisplayContainerValue6" parent="Control/CharacterInfo/HBoxContainer/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 64.0
margin_right = 491.0
margin_bottom = 92.0

[node name="HBoxContainer" parent="Control/CharacterInfo/HBoxContainer/VBoxContainer/DisplayContainerValue6" index="0"]
margin_right = 484.0

[node name="ValueNameLabel" parent="Control/CharacterInfo/HBoxContainer/VBoxContainer/DisplayContainerValue6/HBoxContainer" index="0"]
margin_right = 236.0
text = "Deity:"

[node name="ValueLabel" parent="Control/CharacterInfo/HBoxContainer/VBoxContainer/DisplayContainerValue6/HBoxContainer" index="1"]
margin_left = 240.0
margin_right = 477.0
text = "Mister Tyone"

[node name="Biography" parent="Control/CharacterInfo/HBoxContainer/VBoxContainer" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 96.0
margin_right = 491.0
margin_bottom = 586.0
size_flags_vertical = 3

[node name="CharacterFeatures" type="PanelContainer" parent="Control"]
visible = false
margin_right = 1000.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CharacterFeatures"]
margin_left = 7.0
margin_top = 7.0
margin_right = 993.0
margin_bottom = 593.0

[node name="SearchBar" parent="Control/CharacterFeatures/VBoxContainer" instance=ExtResource( 6 )]
margin_right = 986.0
margin_bottom = 38.0
node_to_search = NodePath("../ScrollContainer/Pages/Attributes")
search_depth = [ {
"depth": 3,
"name": "Feature",
"name_of_node_to_continue": "Features"
}, {
"depth": 0,
"name": "Catagory",
"name_of_node_to_continue": ""
} ]

[node name="ScrollContainer" type="ScrollContainer" parent="Control/CharacterFeatures/VBoxContainer"]
margin_top = 42.0
margin_right = 986.0
margin_bottom = 586.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Pages" type="MarginContainer" parent="Control/CharacterFeatures/VBoxContainer/ScrollContainer"]
margin_right = 986.0
margin_bottom = 544.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="Attributes" type="VBoxContainer" parent="Control/CharacterFeatures/VBoxContainer/ScrollContainer/Pages"]
margin_right = 986.0
margin_bottom = 544.0
rect_pivot_offset = Vector2( 258.5, 277.5 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skills" type="VBoxContainer" parent="Control/CharacterFeatures/VBoxContainer/ScrollContainer/Pages"]
visible = false
margin_right = 986.0
margin_bottom = 544.0
rect_pivot_offset = Vector2( 234.5, 269.5 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TraitsPerks" type="VBoxContainer" parent="Control/CharacterFeatures/VBoxContainer/ScrollContainer/Pages"]
visible = false
margin_right = 986.0
margin_bottom = 544.0
size_flags_horizontal = 3
size_flags_vertical = 7

[node name="SearchResults" type="VBoxContainer" parent="Control/CharacterFeatures/VBoxContainer/ScrollContainer"]
visible = false
margin_right = 986.0
margin_bottom = 544.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )

[node name="Label" type="Label" parent="Control/CharacterFeatures/VBoxContainer/ScrollContainer/SearchResults"]
margin_right = 484.0
margin_bottom = 14.0
text = "-- NO RESULTS FOUND --"
align = 1
valign = 1

[node name="CharacterPersonality" type="PanelContainer" parent="Control"]
visible = false
margin_right = 1000.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CharacterPersonality"]
margin_left = 7.0
margin_top = 7.0
margin_right = 993.0
margin_bottom = 593.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CharacterPersonality/HBoxContainer"]
margin_right = 491.0
margin_bottom = 586.0
size_flags_horizontal = 3

[node name="PersonalityChart" parent="Control/CharacterPersonality/HBoxContainer/VBoxContainer" instance=ExtResource( 7 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 491.0
margin_bottom = 554.0
size_flags_vertical = 3

[node name="DisplayContainerValue" parent="Control/CharacterPersonality/HBoxContainer/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 558.0
margin_right = 491.0
margin_bottom = 586.0

[node name="HBoxContainer" parent="Control/CharacterPersonality/HBoxContainer/VBoxContainer/DisplayContainerValue" index="0"]
margin_right = 484.0

[node name="ValueNameLabel" parent="Control/CharacterPersonality/HBoxContainer/VBoxContainer/DisplayContainerValue/HBoxContainer" index="0"]
margin_right = 236.0
text = "Temperament:"

[node name="ValueLabel" parent="Control/CharacterPersonality/HBoxContainer/VBoxContainer/DisplayContainerValue/HBoxContainer" index="1"]
margin_left = 240.0
margin_right = 477.0
text = "Melancholic"

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/CharacterPersonality/HBoxContainer"]
margin_left = 495.0
margin_right = 986.0
margin_bottom = 586.0
size_flags_horizontal = 3

[node name="Control" parent="Control/CharacterPersonality/HBoxContainer/VBoxContainer2" instance=ExtResource( 11 )]
margin_right = 491.0
margin_bottom = 120.0

[node name="Inventory" parent="Control" instance=ExtResource( 4 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 1000.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -493.0
margin_top = 6.0
margin_right = 493.0
margin_bottom = 20.0
text = "John Everyman"
align = 1
valign = 1

[editable path="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue"]
[editable path="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue4"]
[editable path="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue2"]
[editable path="Control/CharacterInfo/HBoxContainer/Information/DisplayContainerValue3"]
[editable path="Control/CharacterInfo/HBoxContainer/Information/DisplayValueBar"]
[editable path="Control/CharacterInfo/HBoxContainer/VBoxContainer/DisplayContainerValue4"]
[editable path="Control/CharacterInfo/HBoxContainer/VBoxContainer/DisplayContainerValue5"]
[editable path="Control/CharacterInfo/HBoxContainer/VBoxContainer/DisplayContainerValue6"]
[editable path="Control/CharacterPersonality/HBoxContainer/VBoxContainer/DisplayContainerValue"]
